longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # custom max body size for file uploading like backing image uploading
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    # homepage auto discovery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Storage
    gethomepage.dev/group: K3S
    gethomepage.dev/icon: longhorn.webp
    gethomepage.dev/name: Longhorn
spec:
  tls:
  - hosts:
    - longhorn.petkus.id.lv
    secretName: longhorn-certificate-secret
  ingressClassName: nginx
  rules:
  - host: longhorn.petkus.id.lv
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
